--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.16",
     "pg": "^8.3.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
@@ -31,6 +33,7 @@
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "eslint": "6.8.0",
