--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "dependencies": {
     "@types/cors": "^2.8.8",
     "@types/multer": "^1.4.4",
+    "aws-sdk": "^2.824.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.7",
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
@@ -32,6 +37,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
