--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/cors": "^2.8.8",
     "@types/multer": "^1.4.4",
+    "@types/redis": "^2.8.28",
     "aws-sdk": "^2.824.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
@@ -23,12 +24,15 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.19.4",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.4.7",
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "pg": "^8.3.2",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.25",
@@ -38,6 +42,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/hapi__joi": "^17.1.6",
+    "@types/ioredis": "^4.19.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
